Working On Navigation

--- a/src/components/MobileComponents/FitlerPage/FilterPage.css
+++ b/src/components/MobileComponents/FitlerPage/FilterPage.css
@@ -1,6 +1,7 @@
 .filterMobileContainer {
     background-color: #3c3c3c;
     width: 100%;
+    height: 768px;
     color: white;
     -webkit-animation: slideFilter 1s forwards;
     -webkit-animation-delay: 2s;
