--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Ubuntu:300');
+* {
+    font-family: 'Ubuntu', sans-serif ;
+}
+
 .flRight{
     float: right;
 }
@@ -5,6 +10,7 @@
     float:left;
 }
 .navContainer{
+    height: 80px;
     margin-bottom: 0px !important;
 }
 
@@ -22,7 +28,6 @@
     padding-top: 12px;
     width:54px;
     height:54px;
- 
 }
 
 .profilePic{
@@ -48,11 +53,8 @@
     margin-top: 10px;
 }
 
-.imgLogo {
-    margin-top: 3px;
-}
 
-.navItem{
+/* .navItem{
     margin-top: 5px;
     padding-left: 5px;
     padding-right:5px;
@@ -60,9 +62,9 @@
     margin-right: 5px;
     margin-top:15px;
     padding-bottom: 15px;
-}
+} */
 
-.dropDownContainer {
+/* .dropDownContainer {
     padding-right: 10px;
     margin-top: 20px;
     padding-bottom: 20px;
@@ -72,13 +74,15 @@
 .dropDownContainerBox {
     margin-right: 7px;
     margin-top: 10px;
-}
+} */
 
-.selected {
+/* .selected {
     border-bottom: 5px solid #FF0000;
-}
+} */
 
-#nav-dropdown {
+
+
+/* #nav-dropdown {
     color: rgb(46, 46, 46);
     text-decoration: none;
 }
@@ -91,7 +95,7 @@
 
 #nav-dropdown::after {
     display:none;
-}
+} */
 
 /* .commentNotificationCircle{
     height: 5px;
@@ -165,6 +169,8 @@
 
 /* Mobile Screens */
 
+
+
 .filterIcon {
     margin-top: 13px;
     margin-left: 10px;
@@ -190,12 +196,25 @@
 .filterIconContainer {
     float: right;
 }
+
+.loggedUser {
+    font-family: 'Ubuntu', sans-serif !important;
+    font-weight: 300 !important;
+}
+
+
 @media only screen and (max-width: 1024px) {
     .flLeft {
         padding-left: 20px;
     }
     .flRight {
         padding-right: 20px;
+    }
+    .navbar-default{
+        height: 50px !important;
+    }
+    .imgLogo, .loggedUser {
+        margin-top: -6px;
     }
 
 }
@@ -207,10 +226,17 @@
     .filterIcon {
         display: none;
     }
+
 }
 
 @media only screen and (min-width: 765px) {
     .fitlerIconMobile {
        display: none;
+    }
+    .navbar-default{
+        height: 80px !important;
+    }
+    .imgLogo, .loggedUser {
+        margin-top: 10px;
     }
 }
