--- a/src/components/MobileComponents/Playground/Playground.css
+++ b/src/components/MobileComponents/Playground/Playground.css
@@ -1,44 +1,16 @@
 .playgroundContainer {
     width: 100%;
-    /* height: 100%; */
     background-color: black;
-    /* margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center; */
     overflow: hidden;
 }
 
 .item {
     height: inherit;
     width: 100%;
-    /* border: 1px solid red; */
     justify-content: center;
     color: white;
-
 }
 
-.hideMe {
-    display: none;
-}
-
-/* .card {
-    background-color: #fff;
-    min-width: 100%;
-    min-height: 200px;
-    display: flex;
-}
-
-.card--content {
-    background-color: #e74c3c;
-    min-width: 200px;
-    margin: 5px;
-  }
-
-.card {
-    overflow-x: auto;
-}
-
-.card::-webkit-scrollbar {
+/* .hideMe {
     display: none;
 } */
