Rerender fixed, triangles on left

--- a/src/components/KendoPanelBar/KendoPanelBar.css
+++ b/src/components/KendoPanelBar/KendoPanelBar.css
@@ -200,3 +200,7 @@
 .k-content {
     background-color: transparent !important;
 }
+
+.k-icon, .k-i-arrow-s, .k-panelbar-expand {
+    margin-right: 100%;
+}
