--- a/src/components/SummaryViewDetails/DetailBreakdown/DetailPanelBar/DetailPanelBar.css
+++ b/src/components/SummaryViewDetails/DetailBreakdown/DetailPanelBar/DetailPanelBar.css
@@ -33,6 +33,8 @@
     font-family: Ubuntu;
     font-style: normal;
     line-height: 30px;
+    border: 1px solid #3c3c3c;
+
     font-size: 13px;
     text-align: center;
     width: 12.41%;
@@ -52,26 +54,22 @@
     font-style: normal;
     line-height: 30px;
     font-size: 13px;
+    border: 1px solid #3c3c3c;
     text-align: center;
     width: 14.18%;
     color: white;
     background-color: #1f1f1f;
 }
 .qtdMarketColumn{
-    /* Market Area US ROW T */
     display: block;
-    /* position: absolute; */
-    /* left: 9.96%;
-    right: 80.18%;
-    top: 52.69%;
-    bottom: 32.96%; */
+    border: 1px solid #3c3c3c;
     float:left;
     font-family: Ubuntu;
     font-style: normal;
     line-height: 30px;
     font-size: 13px;
     text-align: center;
-    width: 11%;
+    width: 11.1%;
     color: white;
     background-color: #1f1f1f;
 
@@ -84,6 +82,8 @@
     right: 80.18%;
     top: 52.69%;
     bottom: 32.96%; */
+    border: 1px solid #3c3c3c;
+
     float:left;
     font-family: Ubuntu;
     font-style: normal;
