--- a/src/components/FilterPanel/CustomDropDownPanel/CustomDropDownPanel.css
+++ b/src/components/FilterPanel/CustomDropDownPanel/CustomDropDownPanel.css
@@ -25,7 +25,7 @@
 .panelBarContainer-open{
     color: white;
     background-color: #3c3c3c;
-    height: 150px !important;
+    height: 450px !important;
     padding-left: 20px;
 }
 
@@ -45,10 +45,12 @@
 
 .quarterFilterContainer{
     float:left;
+    clear:right;
     font-size:14px !important;
     display:none;
     height: 0px;
-    margin-right: 20px;
+    padding-right: 20px;
+    margin-bottom: 5px;
     padding-top: 5px;
     -webkit-transition: height 2s; /* For Safari 3.1 to 6.0 */
     transition: height 2s;
@@ -97,8 +99,7 @@
 @media only screen and (max-width: 1607px) {
     /* tablets and desktop */
     .panelBarContainer-open{
-        height: 210px;
-
+        height: 500px;
     }
 }
 
