--- a/src/components/CommentPanel/CommentBox.css
+++ b/src/components/CommentPanel/CommentBox.css
@@ -226,3 +226,9 @@ hr{
 .mobileMainCommentContent{
   margin-left: 65px;
 }
+
+.mobileCommentsReplies {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-left: 10%;
+}
