--- a/src/components/SecondaryContent/SecondaryContent.css
+++ b/src/components/SecondaryContent/SecondaryContent.css
@@ -244,7 +244,7 @@
 /* Mobile */
 
 .mobileSecondaryBox {
-	height: 80px;
+	height: 60px;
 	background-color: #1f1f1f;
 
 }
@@ -264,7 +264,7 @@
 	font-style: normal;
 	font-weight: bold;
 	line-height: normal;
-	font-size: 25px;
+	font-size: 1.2em;
 	margin-bottom: -20px;
 	margin-right: 20px;
 	padding-top:10px;
@@ -278,7 +278,7 @@
 	font-style: normal;
 	font-weight: bold;
 	line-height: normal;
-	font-size: 25px;
+	font-size: 1.2em;
 	margin-bottom: -20px;
 	margin-right: 20px;
 }
@@ -328,13 +328,13 @@
 	font-style: normal;
 	/* font-weight: bold; */
 	line-height: normal;
-	font-size: 1.5em;
+	font-size: 1.2em;
 	color: white;
 	float: left;
-	padding-top: 24px;
-	padding-left: 24px;
+	padding-top: 10px;
+	padding-left: 10px;
 	width: 50%;
-	height: 80px;
+	height: 100%;
 
 }
 
@@ -342,7 +342,7 @@
 .primaryDataCategoryContainer {
 	padding-top: -10px;
 	border: 1px solid transparent;
-	height: 55px;
+	height: 23px;
 }
 
 .primaryCategoryTitle {
@@ -356,15 +356,15 @@
 	width: 50%;
 	margin-left: 70px;
 	height: 30px;
-	margin-top: 12px;
+	/* margin-top: 12px; */
 }
 
 .primaryCateogryNav  {
 	float: left;
-	font-size: 2.8em;
+	font-size: 1.5em;
 	color: white;
 	margin-left: 20px;
-	height: 30px;
+	height:20px;
 	margin-top: -5px;
 }
 
