Fixed Sizing Issues Between mobile/ desktop/ mobile active secondary card is always on top now, the pull up bar only goes up to the bottom of the active card, filters have been condensed in size, Submit button for mobile filters is more distinguishable, swipe issue fixed

--- a/src/components/SummaryViewDetails/DetailBreakdown/DetailPanelBar/DetailPanelBar.css
+++ b/src/components/SummaryViewDetails/DetailBreakdown/DetailPanelBar/DetailPanelBar.css
@@ -1,6 +1,6 @@
 .panelItemTitle{
     font-size:24px;
-    background-color:#1f1f1f;
+    background-color:#D8D8D8 !important;
     color: white;
 }
 
@@ -273,4 +273,8 @@
 
 .k-icon, .k-i-arrow-s, .k-panelbar-expand {
     margin-right: 100%;
+}
+.k-link:hover{
+    color: black !important;
+    background-color: #D8D8D8 !important;
 }
