--- a/src/components/SecondaryContent/SecondaryContent.css
+++ b/src/components/SecondaryContent/SecondaryContent.css
@@ -50,19 +50,19 @@
 
 
 /* Journey Card Selected Dynamic */
-.journeyBoxAlert { border: 2px solid #f4f4f4;}
+/* .journeyBoxAlert { border: 2px solid #f4f4f4;} */
 
-.journeyHeaderAlert { background-color: #f4f4f4;}
+/* .journeyHeaderAlert { background-color: #f4f4f4;} */
 
 
 
 .journeyBoxAlert {
 	position: relative;
 	background: #131313;
-	border: 4px solid #f4f4f4;
+	border: 2px solid #f4f4f4 !important;
 }
 
-.journeyBoxAlert:after, .journeyBoxAlert:before {
+/* .journeyBoxAlert:after, .journeyBoxAlert:before {
 	left: 100%;
 	top: 50%;
 	border: solid transparent;
@@ -71,9 +71,9 @@
 	width: 0;
 	position: absolute;
 	pointer-events: none;
-}
+} */
 
-.journeyBoxAlert:after {
+/* .journeyBoxAlert:after {
 	border-color: rgba(136, 183, 213, 0);
 	border-left-color: #f4f4f4;
 	border-width: 20px;
@@ -84,15 +84,15 @@
 	border-left-color: #f4f4f4;
 	border-width: 26px;
 	margin-top: -26px;
-}
+} */
 /* END DYNAMIC RED */
 
 /* Journey Card Selected Dynamic - GREEN */
-.journeyBoxAlertGreen { border: 2px solid #f4f4f4;}
+/* .journeyBoxAlertGreen { border: 2px solid #f4f4f4;}
 
-.journeyHeaderAlertGreen { background-color:#f4f4f4;}
+.journeyHeaderAlertGreen { background-color:#f4f4f4;} */
 
-.journeyBoxAlertGreen {
+/* .journeyBoxAlertGreen {
 	position: relative;
 	background: #131313;
 	border: 4px solid #f4f4f4;
@@ -106,9 +106,9 @@
 	width: 0;
 	position: absolute;
 	pointer-events: none;
-}
+} */
 
-.journeyBoxAlertGreen:after {
+/* .journeyBoxAlertGreen:after {
 	border-color: rgba(136, 183, 213, 0);
 	border-left-color: #f4f4f4;
 	border-width: 20px;
@@ -119,7 +119,7 @@
 	border-left-color: #f4f4f4;
 	border-width: 26px;
 	margin-top: -26px;
-}
+} */
 /* END DYNAMIC RED */
 
 .journeyContent {
@@ -246,11 +246,12 @@
 .mobileSecondaryBox {
 	height: 60px;
 	background-color: #1f1f1f;
+	border: 2px solid #1f1f1f;
 
 }
-.mobileSecondaryHeader {
-	/* display: none; */
-}
+/* .mobileSecondaryHeader {
+	/* display: none;
+} */
 .mobileSecondaryHover {
 	border: 2px solid black;
 }
@@ -270,7 +271,7 @@
 	padding-top:10px;
 
 }
-.mobileSecondaryContentTarget { display: none; }
+.mobileSecondaryContentTarget { float:left; padding-left: 10px;color:white; }
 
 .mobileSecondaryContanetAmountGreen {
 	color: #0DB16E;
@@ -308,11 +309,12 @@
 
 .resizerIcon {
 
-	height: 10px;
-	width: 100px;
+	height: 25px;
+	width: 300px;
 	border-radius: 5px;
 	background: grey;
 	margin: 0 auto;
+	padding-left: 20%;
 }
 
 
