--- a/src/components/FilterPanel/CustomDropDownPanel/CustomDropDownPanel.css
+++ b/src/components/FilterPanel/CustomDropDownPanel/CustomDropDownPanel.css
@@ -22,12 +22,12 @@
     -webkit-transition: height 1s; /* For Safari 3.1 to 6.0 */
     transition: height 1s;
 }
-.panelBarContainer-open{
+/* .panelBarContainer-open{
     color: white;
     background-color: #3c3c3c;
-    height: 400px !important;
+    height: 200px !important;
     padding-left: 20px;
-}
+} */
 
 @media only screen and (max-width: 1024px) {
     .panelDropDownContainer {
@@ -62,6 +62,7 @@
 .quarterFilterContainer{
     float:left;
     clear:right;
+    color: white;
     font-size:14px !important;
     display:none;
     height: 0px;
@@ -115,14 +116,14 @@
 @media only screen and (max-width: 1607px) {
     /* tablets and desktop */
     .panelBarContainer-open{
-        height: 400px;
+        height: 225px;
     }
 }
 
 @media only screen and (max-width: 810px) {
     /* tablets and desktop */
     .panelBarContainer-open{
-        height: 350px;
+        height: 335px;
 
     }
 }
