--- a/src/components/CommentPanel/CommentBox.css
+++ b/src/components/CommentPanel/CommentBox.css
@@ -190,7 +190,7 @@ hr{
   box-sizing: content-box;
 }
 
-.mobileCommentContainer:after {
+/* .mobileCommentContainer:after {
   content: "";
   position: absolute;
   z-index: 1;
@@ -200,7 +200,7 @@ hr{
   background-image: linear-gradient(to bottom, rgba(71, 67, 67, 0), rgb(0, 0, 0) 90%);
   width: 100%;
   height: 12em;
-}
+} */
 
 
 
