--- a/src/components/MobileComponents/Playground/Playground.css
+++ b/src/components/MobileComponents/Playground/Playground.css
@@ -1,7 +1,7 @@
 .playgroundContainer {
     width: 100%;
-    background-color: black;
-    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0);
+    /* overflow: hidden; */
 }
 
 .item {
