--- a/src/components/MobileComponents/Playground/components/MobileViewDetails/MobileViewDetails.css
+++ b/src/components/MobileComponents/Playground/components/MobileViewDetails/MobileViewDetails.css
@@ -1,5 +1,5 @@
 .details-mobile-container {
-    padding-top: 10px;
+    padding-top: -9px;
 }
 
 .details-mobile-container:after {
@@ -9,25 +9,34 @@
     bottom: 0;
     left: 0;
     pointer-events: none;
-    background-image: linear-gradient(to bottom, rgba(71, 67, 67, 0), rgb(0, 0, 0) 90%);
+    /* background-image: linear-gradient(to bottom, rgba(71, 67, 67, 0), rgb(0, 0, 0) 90%); */
     width: 100%;
     height: 12em;
 }
 
 .content-col-left {
     text-align: right;
-    padding: 1%;
+    /* padding: 1%; */
+    font-size: 12px;
+
+    width: 107px;
 }
 
 .text-align-mid, .content-col-left{
     text-align: center;
     margin-bottom: -4px;
-    padding: 1%;
+    /* padding: 1%; */
+    font-size: 12px;
+
+    width: 107px;
 }
 
 .col-headers-mobile {
     height: 20px;
     margin-bottom: 6px;
+    font-size: 12px;
+
+    width: 107px;
 }
 
 
