--- a/src/components/SummaryViewDetails/SummaryViewDetails.css
+++ b/src/components/SummaryViewDetails/SummaryViewDetails.css
@@ -37,10 +37,10 @@
 
 /* Background Indicators */
 .red{
-    color: #FF0000;
+    color: #FF0000 !important;
 }
 .green{
-    color: #0DB16E;
+    color: #0DB16E !important;
 }
 
 /* Summary Breadcrumb */
@@ -162,7 +162,7 @@
 
 .excelSpan{
     float: right;
-    width: 20%;
+    /* width: 20%; */
     padding-right: 5px;
 }
 /* Week  Metric */
