--- a/src/components/PrimaryContent/PrimaryContent.css
+++ b/src/components/PrimaryContent/PrimaryContent.css
@@ -207,7 +207,7 @@
 	text-align: center;
 	font-size:20px;
 	font-weight: bold;
-	margin-left: 12%;
+	/* margin-left: 12%; */
 }
 
 
@@ -246,7 +246,7 @@
 	text-align: center;
 	font-size:20px;
 	font-weight: bold;
-	margin-left: 12%;
+	/* margin-left: 12%; */
 	color: black ;
 
 }
@@ -554,4 +554,8 @@ img {
 	width: 28px;
 	height: 28px;
 	content: " ";
+}
+
+.container-primary {
+	padding: 2px;
 }
