--- a/src/components/SecondaryContent/SecondaryContent.css
+++ b/src/components/SecondaryContent/SecondaryContent.css
@@ -333,8 +333,9 @@
 	height: 35px;
 	float: right;
 	border-radius: 24px;
-	margin-top: -12px;
-	margin-right: -20px;
+	/* margin-top: -12px;
+	margin-right: -20px; */
+	margin-right: 9px;
 }
 
 .four-squares {
@@ -346,7 +347,7 @@
 	text-align: center;
 }
 
-.stats {
+.stats-details {
 	margin-right: 2px;
 	font-size: 11px;
 }
@@ -555,4 +556,8 @@
 	  opacity: 0;
 	}
   }
-  
+	
+	.QRF-Percent {
+		padding-left: 5px !important;
+		font-size: 12px !important;
+	}
