--- a/src/components/SecondaryContent/SecondaryContent.css
+++ b/src/components/SecondaryContent/SecondaryContent.css
@@ -265,13 +265,18 @@
 	font-style: normal;
 	font-weight: bold;
 	line-height: normal;
-	font-size: 1.2em;
+	/* font-size: 1.2em; */
 	margin-bottom: -20px;
 	margin-right: 20px;
 	padding-top:10px;
 
 }
-.mobileSecondaryContentTarget { float:left; padding-left: 10px;color:white; }
+.mobileSecondaryContentTarget { 
+	float:left; 
+	padding-left: 10px;
+	color:white; 
+	font-size: 12px !important; 
+}
 
 .mobileSecondaryContanetAmountGreen {
 	color: #0DB16E;
@@ -279,7 +284,7 @@
 	font-style: normal;
 	font-weight: bold;
 	line-height: normal;
-	font-size: 1.2em;
+	/* font-size: 1.2em; */
 	margin-bottom: -20px;
 	margin-right: 20px;
 }
@@ -302,8 +307,8 @@
 	width: 100%;
 	position: relative;
 	background-color: #262125;
-	border-top-right-radius: 24px;
-	border-top-left-radius: 24px;
+	/* border-top-right-radius: 24px;
+	border-top-left-radius: 24px; */
 	color: white;
 	padding: 13px;
 	/* top: -191px; */
@@ -334,18 +339,14 @@
 	height: 35px;
 	float: right;
 	border-radius: 24px;
-	/* margin-top: -12px;
-	margin-right: -20px; */
-	margin-right: 9px;
+	margin-right: -7px;
 }
 
 .four-squares {
-	padding-left: 13px;
-	width: 100%;
 	height: 40px;
-	float: left;
+	float: right;
 	margin-bottom: 5px;
-	text-align: center;
+	padding-right: 8px;
 }
 
 .stats-details {
@@ -383,7 +384,7 @@
 	font-family: Ubuntu;
 	font-style: normal;
 	line-height: normal;
-	font-size: 1.2em;
+	/* font-size: 1.2em; */
 	color: white;
 	float: left;
 	padding-top: 10px;
@@ -409,6 +410,7 @@
 	width: 50%;
 	margin-left: 70px;
 	height: 30px;
+	font-size: 17px;
 }
 
 .primaryCateogryNav  {
@@ -423,6 +425,7 @@
 
 
 .sliderContainer {
+		margin-top: 5px;
     color: white;
     height: 185px;
     width: 100%;
@@ -478,13 +481,13 @@
 }
 
 .slide-out-bottom {
-	-webkit-animation: slide-out-bottom 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-	        animation: slide-out-bottom 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+	-webkit-animation: slide-out-bottom 0.3s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+	        animation: slide-out-bottom 0.3s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
 
 .slide-in-bottom {
-	-webkit-animation: slide-in-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-	        animation: slide-in-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	-webkit-animation: slide-in-bottom 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: slide-in-bottom 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
 /* ----------------------------------------------
