--- a/src/components/PrimaryContent/PrimaryContent.css
+++ b/src/components/PrimaryContent/PrimaryContent.css
@@ -184,7 +184,6 @@
 	height: 200px;
 	width: 100%;
 	margin-bottom:5px;
-	/* box-shadow: 5px 10px; */
 }
 
 .selectedCardText {
@@ -194,6 +193,7 @@
 	height:100%;
 	width:100%;
 	background-color: transparent;
+	cursor: pointer;
 }
 .sumChartHeader {
 	margin-top: -8px;
@@ -203,7 +203,7 @@
 .sumChartHeaderText {
 	/* dynamic */
 	color: white;
-	/* padding-top: 8px; */
+	padding-top: 2px;
 	text-align: center;
 	font-size:20px;
 	font-weight: bold;
@@ -214,7 +214,7 @@
 
 .valueText{
 	font-size:1.8em;
-	font-weight: bold;
+	font-weight: 600;
 	display:block;
 }
 .primaryRow{
@@ -244,7 +244,7 @@
 	/* dynamic */
 	/* padding-top: 8px; */
 	text-align: center;
-	font-size:20px;
+	font-size:22px;
 	font-weight: bold;
 	/* margin-left: 12%; */
 	color: black ;
