--- a/src/components/SummaryViewDetails/SummaryViewDetails.css
+++ b/src/components/SummaryViewDetails/SummaryViewDetails.css
@@ -32,7 +32,7 @@
 .statsHeader {
     float: right;
     margin-right: 13px;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 .stats-container-main {
@@ -42,12 +42,13 @@
 }
 
 .stats{
-    font-size:13px;
+    font-size:16px;
     font-weight: 600;
 }
 
 .footer {
-    font-size: 12px;
+    font-size: 16px;
+    font-weight: 600;
 }
 
 /* Background Indicators */
@@ -109,7 +110,10 @@
     padding: 0px;
     height:30px;
     width: 20%;
+    cursor: pointer;
 }
+
+
 /* Units Metric Left Side of Selector */
 .unitMetric, .qtdMetric{
     float:left;
@@ -288,7 +292,7 @@
 }
 
 
-.qtdTotalTitle{
+.qtdTotalTitle {
     float: left;
     font-size: 24px;
     padding: 0px !important;
@@ -386,8 +390,9 @@
 /* .k-widget, .k-panelbar, .k-reset, .k-header {
     background-color: transparent;
 } */
-.k-panelbar>.k-item>.k-link .k-icon {
+.k-panelbar, .k-item, .k-link .k-icon {
     color: white !important;
+    font-size: 24px !important;
 }
 
 .summary-filter {
