--- a/src/components/FilterPanel/CustomDropDownPanel/CustomDropDownPanel.css
+++ b/src/components/FilterPanel/CustomDropDownPanel/CustomDropDownPanel.css
@@ -50,7 +50,8 @@
     border: none;
     width: 100%;
     padding: 5px;
-    margin-top: 10px;
+    margin-bottom: 25px;
+    margin-top: 20px;
     font-weight: 580;
   }
   
@@ -68,7 +69,7 @@
     display:none;
     height: 0px;
     padding-right: 20px;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     padding-top: 5px;
     -webkit-transition: height 2s; /* For Safari 3.1 to 6.0 */
     transition: height 2s;
@@ -82,8 +83,13 @@
     height: 0px;
     /* display:none; */
 }
-
-
+.globalPrimaryKPIFilters{
+margin-top: 20px;
+color: white;
+font-weight: bold;
+border-top: 1px white dashed;
+padding-top: 15px;
+}
 /* Drop Down Animations */
 
 @keyframes fadein {
@@ -114,17 +120,17 @@
     from { opacity: 0; }
     to   { opacity: 1; }
 }
-@media only screen and (max-width: 1607px) {
+@media only screen and (max-width: 2400px) {
     /* tablets and desktop */
     .panelBarContainer-open{
-        height: 225px;
+        height: 350px;
     }
 }
 
 @media only screen and (max-width: 810px) {
     /* tablets and desktop */
     .panelBarContainer-open{
-        height: 335px;
+        height: 350px;
 
     }
 }
