--- a/src/components/SecondaryContent/SecondaryContent.css
+++ b/src/components/SecondaryContent/SecondaryContent.css
@@ -12,13 +12,13 @@
 /* Figma Styles */
 .journeyBox {
 	width: 100%;
-	height: 140px;
+	height: 150px;
 	background: #000000;
 	/* Dynamic */
 	border: 2px solid #3c3c3c;
 	box-sizing: border-box;
 }
-
+boxContentAmountGreen
 .journeyHeader {
 	height: 100%;
 	width: 15px;
@@ -142,13 +142,13 @@
 
 .journeysAmount {
 	padding-top: 4px;
+	padding-bottom:4px;
 	font-family: Ubuntu;
 	font-style: normal;
 	font-weight: 600;
 	width: 90%;
 	line-height: normal;
 	font-size: 1.8em;
-	color: #FF0000;
 }
 
 .journeysAmountGreen {
