--- a/src/components/SummaryViewDetails/SummaryViewDetails.css
+++ b/src/components/SummaryViewDetails/SummaryViewDetails.css
@@ -109,7 +109,7 @@
     float: right;
     padding: 0px;
     height:30px;
-    width: 20%;
+    width: 100%;
     cursor: pointer;
 }
 
@@ -245,7 +245,7 @@
 }
 .qtdDetailTitle{
     float:right;
-    width: 90%;
+    width: 89%;
     height:30px;
     clear:right;
     text-align:center;
@@ -322,7 +322,7 @@
     width: 14.65%;
 }
 .qtdFin{
-    width: 14%;
+    width: 13.95%;
 }
 .halfSize{
     width:63px;
@@ -396,7 +396,7 @@
 }
 
 .summary-filter {
-    margin-left: 100px;
+    /* margin-left: 100px; */
     float:left;
     /* border: 1px solid red; */
     width: 25%;
