--- a/src/components/FilterPanel/CustomDropDownPanel/CustomDropDownPanel.css
+++ b/src/components/FilterPanel/CustomDropDownPanel/CustomDropDownPanel.css
@@ -77,6 +77,7 @@
 }
 .quarterFilterContainer-open{
     display:inline-block;
+    margin-bottom: 20px;
     height: 60px;
 }
 .quarterFilterContainer-closed{
@@ -123,14 +124,14 @@ padding-top: 15px;
 @media only screen and (max-width: 2400px) {
     /* tablets and desktop */
     .panelBarContainer-open{
-        height: 350px;
+        height: 390px;
     }
 }
 
 @media only screen and (max-width: 810px) {
     /* tablets and desktop */
     .panelBarContainer-open{
-        height: 350px;
+        height: 390px;
 
     }
 }
