--- a/src/components/MobileComponents/Playground/components/MobileViewDetails/MobileViewDetails.css
+++ b/src/components/MobileComponents/Playground/components/MobileViewDetails/MobileViewDetails.css
@@ -9,33 +9,26 @@
     bottom: 0;
     left: 0;
     pointer-events: none;
-    /* background-image: linear-gradient(to bottom, rgba(71, 67, 67, 0), rgb(0, 0, 0) 90%); */
     width: 100%;
     height: 12em;
+
 }
 
-.content-col-left {
-    text-align: right;
-    /* padding: 1%; */
-    font-size: 12px;
-
-    width: 107px;
+.slider-content {
+    height: 500px !important;
 }
 
-.text-align-mid, .content-col-left{
+.text-align-mid {
     text-align: center;
-    margin-bottom: -4px;
-    /* padding: 1%; */
     font-size: 12px;
-
     width: 107px;
+    height: 22px;
 }
 
 .col-headers-mobile {
     height: 20px;
     margin-bottom: 6px;
     font-size: 12px;
-
     width: 107px;
 }
 
