Scaffold for Buy, Use and Renew Actions and Reducer, and added the new subfilters to filters system

--- a/src/components/SummaryViewDetails/DetailBreakdown/DetailPanelBar/DetailPanelBar.css
+++ b/src/components/SummaryViewDetails/DetailBreakdown/DetailPanelBar/DetailPanelBar.css
@@ -290,7 +290,7 @@
 .k-icon, .k-i-arrow-s, .k-panelbar-expand {
     margin-right: 100%;
 }
-.k-link:hover{
+.k-link:hover , .k-header:hover{
     color: black !important;
     background-color: #D8D8D8 !important;
     padding-left: 7px !important;
@@ -311,8 +311,4 @@
     -o-transform: rotate(180deg) !important;   /* Opera */
     transform: rotate(180deg) !important;
 }
-
-/* .k-panelbar-expand::before {
-    border: 1px solid red;
-} */
 
