--- a/src/components/SummaryViewDetails/DetailBreakdown/DetailPanelBar/DetailPanelBar.css
+++ b/src/components/SummaryViewDetails/DetailBreakdown/DetailPanelBar/DetailPanelBar.css
@@ -276,7 +276,7 @@
 }
 
 .k-panelbar, .k-item.k-state-expanded, .k-link {
-    color: black;
+    color: white;
     background-color: #1f1f1f !important;
 }
 .geoTableContainer{
@@ -290,8 +290,8 @@
 .k-icon, .k-i-arrow-s, .k-panelbar-expand {
     margin-right: 100%;
 }
-.k-link:hover , .k-header:hover{
-    color: black !important;
+.k-link:hover  {
+    color: white !important;
     background-color: rgb(71, 71, 71) !important;
     padding-left: 7px !important;
 }
