--- a/src/components/FilterPanel/CustomDropDownPanel/CustomDropDownPanel.css
+++ b/src/components/FilterPanel/CustomDropDownPanel/CustomDropDownPanel.css
@@ -16,11 +16,14 @@
 }
 
 .panelDropDownContainer{
-    height: 225px;
+    height: 165px;
     width: 100%;
     background-color: #3c3c3c;
     -webkit-transition: height 1s; /* For Safari 3.1 to 6.0 */
     transition: height 1s;
+}
+.panelDropDownExtendedContainer{
+ height: 300px;
 }
 /* .panelBarContainer-open{
     color: white;
@@ -123,9 +126,9 @@ padding-top: 15px;
 }
 @media only screen and (max-width: 2400px) {
     /* tablets and desktop */
-    .panelBarContainer-open{
+    /* .panelBarContainer-open{
         height: 390px;
-    }
+    } */
 }
 
 @media only screen and (max-width: 810px) {
