--- a/src/components/SummaryViewDetails/DetailBreakdown/DetailPanelBar/DetailPanelBar.css
+++ b/src/components/SummaryViewDetails/DetailBreakdown/DetailPanelBar/DetailPanelBar.css
@@ -5,7 +5,7 @@
 }
 
 .topHeaderBar{
-  font-size: 12px;
+  font-size: 15px;
   background-color: #1f1f1f;
   width: 78.5%
 }
@@ -14,7 +14,7 @@
 }
 
 .qtdtopHeaderBar{
-    font-size: 12px;
+    font-size: 15px;
     background-color: #1f1f1f;
     width: 75.5%
   }
@@ -32,20 +32,13 @@
     padding:0px;
 }
 .qtdColumn{
-    /* Market Area US ROW T */
     display: block;
-    /* position: absolute; */
-    /* left: 9.96%;
-    right: 80.18%;
-    top: 52.69%;
-    bottom: 32.96%; */
     float:left;
     font-family: Ubuntu;
     font-style: normal;
     line-height: 30px;
     border: 1px solid #3c3c3c;
-
-    font-size: 13px;
+    font-size: 15px;
     text-align: center;
     width: 12.41%;
     color: white;
@@ -54,16 +47,11 @@
 .qtdJourneyColumn{
     /* Market Area US ROW T */
     display: block;
-    /* position: absolute; */
-    /* left: 9.96%;
-    right: 80.18%;
-    top: 52.69%;
-    bottom: 32.96%; */
     float:left;
     font-family: Ubuntu;
     font-style: normal;
     line-height: 30px;
-    font-size: 13px;
+    font-size: 15px;
     border: 1px solid #3c3c3c;
     text-align: center;
     width: 14.18%;
@@ -77,7 +65,7 @@
     font-family: Ubuntu;
     font-style: normal;
     line-height: 30px;
-    font-size: 16px;
+    font-size: 15px;
     text-align: center;
     width: 11.1%;
     color: white;
@@ -85,7 +73,6 @@
 
 }
 .qtdJourneyMarketColumn{
-    /* Market Area US ROW T */
     display: block;
     /* position: absolute; */
     /* left: 9.96%;
@@ -93,12 +80,11 @@
     top: 52.69%;
     bottom: 32.96%; */
     border: 1px solid #3c3c3c;
-
     float:left;
     font-family: Ubuntu;
     font-style: normal;
     line-height: 30px;
-    font-size: 16px;
+    font-size: 15px;
     text-align: center;
     width: 12.48%;
     color: white;
@@ -131,11 +117,12 @@
        font-family: Ubuntu;
        font-style: normal;
        line-height: 30px;
-       font-size: 13px;
+       font-size: 15px;
        text-align: center;
        width: 14.28%;
        color: white;
        background-color: #1f1f1f;
+       border: 1px solid #3c3c3c;
 }
 .weekMarketColumn{
        /* Market Area US ROW T */    
@@ -151,7 +138,7 @@
        font-family: Ubuntu;
        font-style: normal;
        line-height: 30px;
-       font-size: 13px;
+       font-size: 15px;
        text-align: center;
        width: 12.2%;
        color: white;
@@ -170,7 +157,7 @@
     font-family: Ubuntu;
     font-style: normal;
     line-height: 30px;
-    font-size: 13px;
+    font-size: 15px;
     text-align: center;
     width: 16.55%;
     color: white;
@@ -191,7 +178,7 @@
     font-family: Ubuntu;
     font-style: normal;
     line-height: 30px;
-    font-size: 13px;
+    font-size: 15px;
     text-align: center;
     width: 14.25%;
     color: white;
@@ -265,7 +252,7 @@
 }
 
 .k-state-selected{
-    background-color: #1f1f1f !important;
+    background-color: #3c3c3c !important;
     color: white !important;
 }
 .k-panelbar, .k-link {
@@ -278,9 +265,10 @@
     color: white;
 }
 
-.k-panelbar, .k-item.k-state-expanded, .k-link {
-    color: white;
-    background-color: #1f1f1f !important;
+/* White panel on QTD Details */
+.k-panelbar, .k-item, .k-state-expanded, .k-link {
+    color: black !important;
+    background-color: #f4f4f4 !important;
 }
 .geoTableContainer{
     padding:5px;
@@ -318,3 +306,10 @@
 .k-state-default {
     background-color: #1f1f1f !important;
 }
+
+.qtdDetailTitle {
+    font-size: 15px;
+    margin-top: 5px;
+    padding-top: 4px;
+}
+
