--- a/src/components/SummaryViewDetails/SummaryViewDetails.css
+++ b/src/components/SummaryViewDetails/SummaryViewDetails.css
@@ -36,9 +36,9 @@
 }
 
 .stats-container-main {
+    border: 1.2px solid white;
     float: right;
-    margin-right: -13px;
-    padding-bottom: 5px;
+    padding: 10px 10px 10px 20px;
 }
 
 .stats{
@@ -49,6 +49,7 @@
 .footer {
     font-size: 16px;
     font-weight: 600;
+    text-align: center;
 }
 
 /* Background Indicators */
