--- a/src/components/FilterPanel/CustomDropDownPanel/CustomDropDownPanel.css
+++ b/src/components/FilterPanel/CustomDropDownPanel/CustomDropDownPanel.css
@@ -217,6 +217,7 @@ padding-top: 15px;
 .css-kd3zsw {
     background-color: rgb(29, 29, 29) !important;
     color: white !important;
+    border: 2px solid #1573E6;
 }
 
 .css-xp4uvy, .css-1492t68 {
