--- a/src/components/SummaryViewDetails/SummaryViewDetails.css
+++ b/src/components/SummaryViewDetails/SummaryViewDetails.css
@@ -39,6 +39,9 @@
     border: 1.2px solid white;
     float: right;
     padding: 10px 10px 10px 20px;
+    border-radius: 3px;
+    /* border-left:10px solid #3C3C3C;
+    background-color: white; */
 }
 
 .stats{
@@ -50,6 +53,7 @@
     font-size: 16px;
     font-weight: 600;
     text-align: center;
+    /* color: black; */
 }
 
 /* Background Indicators */
@@ -91,15 +95,17 @@
 
 }
 .detailTitle2{
-    color: white;
-
+    color: rgb(0, 0, 0);
+    background-color: #f4f4f4;
+    border-left:10px solid #3c3c3c;
     font-style: Light;
     font-size: 30px;
     line-height: 34px;
     align-content: Left;
     float:left;
-    background-color:transparent;
-    padding: 0px;
+    /* background-color:transparent; */
+    border-radius: 3px;
+    padding: 5px 8px 5px 8px;
 
 }
 .chartContainer{
