--- a/src/Views/Summary/Summary.css
+++ b/src/Views/Summary/Summary.css
@@ -9,7 +9,14 @@ body {
 }
 /* Animation */
 
-
+#commingSoon{
+    width:100%;
+    height:100%;
+    text-align: center;
+    font-size: 10em;
+    font-weight: bold;
+    color: white;
+}
 .example-appear {
     opacity: 0;
     transform: translateY(-200px);
