--- a/src/components/SecondaryContent/SecondaryContent.css
+++ b/src/components/SecondaryContent/SecondaryContent.css
@@ -630,3 +630,10 @@
 		padding-left: 5px !important;
 		font-size: 12px !important;
 	}
+
+	.badge {
+		font-weight: 600 !important;
+		font-size: 15px !important;
+		background-color: #f4f4f4 !important;
+		color: black;
+	}
