--- a/src/components/SecondaryContent/SecondaryContent.css
+++ b/src/components/SecondaryContent/SecondaryContent.css
@@ -321,18 +321,17 @@
 .mobileCommentsIcon { display: none; }
 
 .mobileSecondaryBoxContentAmount {
-	margin-right: 10px;
 	float: right;
 	color: red;
 	font-family: Ubuntu;
 	font-style: normal;
 	font-weight: bold;
 	line-height: normal;
-	font-size: 1.8em;
+	font-size: 1.5em;
 	margin-bottom: -20px;
 	margin-right: 20px;
 	padding-top:10px;
-
+	margin-left: 3.5%;
 }
 .mobileSecondaryContentTarget { 
 	float:left; 
@@ -451,10 +450,9 @@
 	padding-left: 10px;
 	height: 100%;
 	width: 50% !important;
-	font-size: 1.8em;
+	font-size: 1.4em;
 	float: left;
 	color: white;
-
 }
 
 /* Primary Data Category Navigation and Title */
@@ -628,7 +626,7 @@
 	
 	.QRF-Percent {
 		padding-left: 5px !important;
-		font-size: 0.75em !important;
+		font-size: 0.65em !important;
 	}
 
 	.badge {
