--- a/src/components/SummaryViewDetails/SummaryViewDetails.css
+++ b/src/components/SummaryViewDetails/SummaryViewDetails.css
@@ -124,7 +124,18 @@
 
 
 /* Units Metric Left Side of Selector */
-.unitMetric, .qtdMetric{
+.unitMetric{
+    float:left;
+    text-align: center;
+    padding-top: 5px;
+    height:30px;
+    width:50%;
+    border-top-right-radius: 100px;
+    border-bottom-right-radius: 100px;
+    border: 1px solid #f4f4f4;
+}
+
+.qtdMetric{
     float:left;
     text-align: center;
     padding-top: 5px;
@@ -135,7 +146,18 @@
     border: 1px solid #f4f4f4;
 }
 /* ARR Metric Right Side of Selector */
-.arrMetric, .weekMetric{
+.arrMetric{
+    float:left;
+    width:50%;
+    height:30px;
+    text-align: center;
+    padding-top:5px;
+    border-top-left-radius: 100px;
+    border-bottom-left-radius: 100px;
+  
+    border: 1px solid #f4f4f4;
+}
+.weekMetric{
     float:left;
     width:50%;
     height:30px;
@@ -143,6 +165,7 @@
     padding-top:5px;
     border-top-right-radius: 100px;
     border-bottom-right-radius: 100px;
+  
     border: 1px solid #f4f4f4;
 }
 
